--- a/app/src/main/res/layout/exo_player_control_view.xml
+++ b/app/src/main/res/layout/exo_player_control_view.xml
@@ -68,7 +68,7 @@
                 android:layout_alignParentStart="true"
                 android:layout_centerVertical="true"
                 android:layout_marginStart="10dp"
-                android:text="5555"
+                android:text="0:00"
                 android:textColor="@color/white" />
 
             <TextView
@@ -78,7 +78,7 @@
                 android:layout_alignParentEnd="true"
                 android:layout_centerVertical="true"
                 android:layout_marginEnd="10dp"
-                android:text="4444"
+                android:text="0:00"
                 android:textColor="@color/white" />
 
             <com.google.android.exoplayer2.ui.DefaultTimeBar
@@ -88,7 +88,7 @@
                 android:layout_centerVertical="true"
                 android:layout_toStartOf="@id/exo_duration"
                 android:layout_toEndOf="@id/exo_position"
-                app:played_color="@color/purple_200"
+                app:played_color="@color/sky_blue"
                 app:scrubber_drawable="@drawable/scrubber" />
         </RelativeLayout>
 
