Finishing video bottom sheet features

--- a/app/src/main/res/layout/item_video_file.xml
+++ b/app/src/main/res/layout/item_video_file.xml
@@ -38,6 +38,7 @@
         android:layout_height="wrap_content"
         android:layout_centerVertical="true"
         android:layout_margin="5dp"
+        android:layout_toStartOf="@id/video_menu_more"
         android:layout_toEndOf="@id/thumbnail_card"
         android:orientation="vertical">
 
