--- a/app/src/main/res/layout/item_video_folder.xml
+++ b/app/src/main/res/layout/item_video_folder.xml
@@ -40,13 +40,15 @@
                 android:layout_height="wrap_content"
                 android:ellipsize="end"
                 android:maxLines="2"
-                android:text="Folder Path" />
+                android:text="Folder Path"
+                android:textColor="@color/light_dark" />
 
             <TextView
                 android:id="@+id/number_of_files"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="5 videos"
+                android:textColor="@color/light_dark"
                 android:textSize="17sp" />
         </LinearLayout>
     </LinearLayout>
