finish video bottom sheet features

--- a/app/src/main/res/layout/activity_video_files.xml
+++ b/app/src/main/res/layout/activity_video_files.xml
@@ -7,9 +7,16 @@
     android:background="@color/white"
     tools:context=".activities.VideoFilesActivity">
 
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/rv_video_files"
+    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
+        android:id="@+id/swipe_refresh_files"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="match_parent">
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/rv_video_files"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" />
+
+    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
