Set color theme for light/dark mode

--- a/app/src/main/res/layout/item_video_file.xml
+++ b/app/src/main/res/layout/item_video_file.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_margin="5dp"
@@ -49,15 +50,15 @@
             android:layout_marginBottom="5dp"
             android:ellipsize="end"
             android:maxLines="2"
-            android:text="Video Name"
-            android:textColor="@color/black" />
+            android:text="@string/video_name"
+            android:textColor="?attr/colorOnPrimary" />
 
         <TextView
             android:id="@+id/video_size"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="4 MB"
-            android:textColor="@color/light_dark" />
+            android:textColor="?attr/colorOnSecondary"
+            tools:text="@string/_4_mb" />
     </LinearLayout>
 
     <ImageView
@@ -68,6 +69,7 @@
         android:layout_centerVertical="true"
         android:background="?attr/selectableItemBackgroundBorderless"
         android:foregroundTint="@color/light_dark"
+        android:padding="4dp"
         android:src="@drawable/ic_more_black" />
 
 </RelativeLayout>
