--- a/app/src/main/res/layout/item_video_folder.xml
+++ b/app/src/main/res/layout/item_video_folder.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_margin="5dp"
@@ -30,8 +31,8 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:maxLines="1"
-                android:text="Folder Name"
-                android:textColor="@color/black"
+                android:text="@string/folder_name"
+                android:textColor="?attr/colorOnPrimary"
                 android:textSize="17sp" />
 
             <TextView
@@ -40,16 +41,16 @@
                 android:layout_height="wrap_content"
                 android:ellipsize="end"
                 android:maxLines="2"
-                android:text="Folder Path"
-                android:textColor="@color/light_dark" />
+                android:text="@string/folder_path"
+                android:textColor="?attr/colorOnSecondary" />
 
             <TextView
                 android:id="@+id/number_of_files"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="5 videos"
-                android:textColor="@color/light_dark"
-                android:textSize="17sp" />
+                android:textColor="?attr/colorOnSecondary"
+                android:textSize="17sp"
+                tools:text="5 videos" />
         </LinearLayout>
     </LinearLayout>
 
