--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,5 @@
     <color name="white">#FFFFFFFF</color>
     <color name="allow_color">#22354F</color>
     <color name="light_dark">#74000000</color>
+    <color name="light_gray">#D3D3D3</color>
 </resources>
